scaffold/typescript-go-main/testdata/baselines/reference/submodule/conformance/typeFromPropertyAssignment4.errors.txt
a.js(8,12): error TS2503: Cannot find namespace 'Outer'.
b.js(1,12): error TS2503: Cannot find namespace 'Outer'.


==== def.js (0 errors) ====
    var Outer = {};
    
==== a.js (1 errors) ====
    Outer.Inner = class {
        constructor() {
            /** @type {number} */
            this.y = 12
        }
    }
    
    /** @type {Outer.Inner} */
               ~~~~~
!!! error TS2503: Cannot find namespace 'Outer'.
    var local
    local.y
    var inner = new Outer.Inner()
    inner.y
    
==== b.js (1 errors) ====
    /** @type {Outer.Inner} */
               ~~~~~
!!! error TS2503: Cannot find namespace 'Outer'.
    var x
    x.y
    var z = new Outer.Inner()
    z.y
    